<resources>
    <string name="app_name">KeyApp</string>
    <string name="key">Key</string>
    <string name="introtitle">Graceful and Feminine</string>
    <string name="introsubtitle">Every woman deserves to feel beautiful and pampered.
        We’re here with personalized beauty services to help you shine from the inside out.</string>
    <string name="introbtn">Get Started</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="signintitle">Hello Again!</string>
    <string name="signinsubtitile">Sign in to your account</string>
    <string name="signuptitle">Hello!</string>
    <string name="signupsubtitle">Register as Beauty Artist</string>
    <string name="email">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="changePass">Forgot your password?</string>
    <string name="or">Or with</string>
    <string name="signinBA">Sign in as Beauty Artist</string>
    <string name="signupBA">Sign up as Beauty Artist</string>

    <string name="signinUser">Sign in as User</string>
    <string name="signupUser">Sign up as User</string>


    <!--    Navbar-->
    <string name="HomeTitle">Home</string>
    <string name="ScheduleTitle">Schedule</string>
    <string name="SearchTitle">Search</string>
    <string name="ChatTitle">Chat</string>
    <string name="UserTitle">User</string>

    <!--    home-->
    <string name="service">Services</string>
    <string name="MUA">Makeup</string>
    <string name="NailArt">Nail Art</string>
    <string name="Eyelash">Eyelash</string>
    <string name="notificaion">Notification</string>

    <string name="Recomendasi">Recommendation</string>

    <!--    home beauty artist-->
    <string name="services">Your Services</string>
    <string name="viewservice">View Service</string>
    <string name="portofolio">Portfolio</string>
    <string name="rating">Rating</string>
    <string name="history">History</string>
    <string name="manageSchedule">Manage Schedule</string>
    <string name="orderlist">Order List</string>

    <string name="Filter">Filter</string>

    <string name="upcoming">Upcoming Schedule</string>
    <string name="Waiting">Waiting for Confirmation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    service-->
    <string name="serviceHeader">Service</string>

    <string name="ServiceName">Service Name</string>
    <string name="AddServiceName">Add Service Name</string>
    <string name="ServicePrice">Service Price</string>
    <string name="AddServicePrice">Add Service Price</string>
    <string name="ServiceCategory">Service Category</string>
    <string name="SelectCategory">Select Service Category</string>
    <string-array name="service_categories">
        <item>Select Service Category</item>
        <item>Makeup</item>
        <item>Nail Art</item>
        <item>Eyelash</item>
    </string-array>
    <string name="ServiceDesc">Service Description</string>
    <string name="AddServiceDesc">Add Service Description</string>
    <string name="ServiceImage">Image</string>
    <string name="AddImage">Add Image</string>
    <string name="AddTime">Available Time</string>

    <string name="EstTime">Estimated Time (minutes)</string>
    <string name="AddEstTime">Add Estimated Time in minutes</string>


    <string name="ForgotPass">Forgot Password</string>
    <string name="SendResetEmail">Send Reset Email </string>


    <!--    profile-->
    <string name="Profile">Profile</string>
    <string name="ServiceLoc">Service Location / Area</string>
    <string name="addServiceLoc">Enter the location where customers can find or book your services.</string>
    <string name="Location">Location</string>
    <string name="AddLocation">Add Location</string>

    <string name="inputTime">Input Available Time</string>

    <string-array name="location">
        <item>Select Service Category</item>
        <item>Make Up</item>
        <item>Nail Art</item>
        <item>Eyelash</item>
    </string-array>

    <string-array name="Hari">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="setTime">Set Time</string>
    <string name="setSchedule">Set Schedule</string>
    <string name="save">Save</string>

    <string name="returnHome">Return to Home</string>

    <string name="PhoneNumber">Phone Number</string>
    <string name="addPhone">Add Phone Number</string>
    <string name="changeProfile">Change Photo</string>

    <string name="viewAll">View All</string>
    <string name="Review">Review</string>
    <string name="Cancel">Cancel</string>
    <string name="Canceled">Canceled</string>
    <string name="AddReview">Add Review</string>
    <string name="Pricelist">Pricelist</string>
    <string name="Appointment">Book Appointment</string>

    <string name="Experience">Experience (years)</string>
    <string name="ExperienceHint">Enter number of years </string>

    <string name="locationtype">Service Location Type</string>
    <string-array name="loctype">
        <item>On-site Studio / Studio Visit</item>
        <item>Home Service</item>
    </string-array>

    <string name="confirm">Confirm</string>
    <string name="Reject">Reject</string>
    <string name="viewDetail">View Detail</string>
    <string name="All">All</string>
    <string name="Confirmed">Confirmed</string>
    <string name="Rejected">Rejected</string>
    <string name="Pending">Pending</string>
    <string name="Reschedule">Reschedule</string>
    <string name="Complete">Complete</string>

    <string name="AddReviewh1">How was your experience?</string>
    <string name="AddReviewh2">Tell us about your experience with your Beauty Assistant</string>
    <string name="AddReviewhint">Write your review here…</string>
    <string name="YOUR_MAP_API_KEY">AIzaSyDw-biV15mc5jiTnd0wqIQI41xRoL79TPA</string>
    <string name="orderlistdetail">Order List Detail</string>

    <string name="servicepricemin">Rp. 0</string>
    <string name="servicepricemax">Rp. 5000000</string>

    <string name="Nodata">No Result Found</string>


</resources>
